# Kosmos

./: CMakeLists.txt  LICENSE  README.md  index.html  package.json  server.js
.github/workflows/: build.yml
data/: deepsky.dsc  nearstars.stc  solarsys.ssc
src/: main.cpp
src/celengine/: CMakeLists.txt
src/celephem/: CMakeLists.txt
src/celutil/: CMakeLists.txt
